Uploading new CV, styling scrollbar and fixing grid position for hobbies, studies and interest

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -158,8 +158,8 @@ body {
 
 ::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px var(--bg-secondary);
-  box-shadow: inset 0 0 6px var(--bg-secondary);
+  -webkit-box-shadow: inset 0 0 6px var(--text-primary);
+  box-shadow: inset 0 0 6px var(--text-primary);
 }
 
 //Bounce animation for scroll down and up
