--- a/src/styles/_work-and-studies.scss
+++ b/src/styles/_work-and-studies.scss
@@ -15,7 +15,7 @@
     grid-row: 6/8;
     @include breakpoint-up(small) {
       margin: auto 10% auto 20vw;
-      grid-row: 6/10;
+      grid-row: 7/10;
       grid-column: 1;
       text-align: right;
     }
